--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "this is namaste react ",
   "scripts": {
     "test": "jest",
-    "start":"parcel index.html",
-    "build":"parcel build index.html"
+    "start": "parcel index.html",
+    "build": "parcel build index.html"
   },
   "repository": {
     "type": "git",
@@ -23,8 +23,12 @@
     "process": "^0.11.10"
   },
   "dependencies": {
+    "node": "^18.17.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.3"
   },
-  "browserslist":["last 2 versions"]
+  "browserslist": [
+    "last 2 versions"
+  ]
 }
