--- a/package.json
+++ b/package.json
@@ -19,8 +19,14 @@
   },
   "homepage": "https://github.com/Kalyani6898/Namaste-React#readme",
   "devDependencies": {
+    "assert": "^2.1.0",
+    "console-browserify": "^1.2.0",
+    "os-browserify": "^0.3.0",
     "parcel": "^2.12.0",
-    "process": "^0.11.10"
+    "postcss": "^8.4.49",
+    "process": "^0.11.10",
+    "tailwindcss": "^3.4.16",
+    "util": "^0.12.5"
   },
   "dependencies": {
     "node": "^18.17.0",
